src/test/ui/feature-gates/feature-gate-asm_unwind.stderr
error[E0658]: the `may_unwind` option is unstable
  --> $DIR/feature-gate-asm_unwind.rs:7:9
   |
LL |         asm!("", options(may_unwind));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #72016 <https://github.com/rust-lang/rust/issues/72016> for more information
   = help: add `#![feature(asm_unwind)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
