src/test/ui/feature-gates/feature-gate-asm_unwind.rs
// only-x86_64

#![feature(asm)]

fn main() {
    unsafe {
        asm!("", options(may_unwind));
        //~^ ERROR the `may_unwind` option is unstable
    }
}
